--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /.vs
+/bin
+/lib
+/_build_/debug-x64-msc-v143/x64/debug
