--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,11 @@
 /bin
 /lib
 /_build_/debug-x64-msc-v143/x64/debug
+/assets
+/support
+/third_party
+/vmlib
+/_build_/debug-x64-gcc/x64/debug
+/Makefile
+/main/main.vcxproj
+/main/Makefile
