--- a/main/main.vcxproj
+++ b/main/main.vcxproj
@@ -102,6 +102,7 @@
     <ClInclude Include="defaults.hpp" />
     <ClInclude Include="loadobj.hpp" />
     <ClInclude Include="point_light.hpp" />
+    <ClInclude Include="scene_object.hpp" />
     <ClInclude Include="simple_mesh.hpp" />
   </ItemGroup>
   <ItemGroup>
@@ -109,6 +110,7 @@
     <ClCompile Include="cylinder.cpp" />
     <ClCompile Include="loadobj.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="scene_object.cpp" />
     <ClCompile Include="simple_mesh.cpp" />
   </ItemGroup>
   <ItemGroup>
